...
	enum ExposureNotificationSetting {
		static let descriptionTitleInactive = "AppStrings.ExposureNotificationSetting.descriptionTitleInactive"
		static let descriptionTitle = "AppStrings.ExposureNotificationSetting.descriptionTitle"
		static let descriptionText1 = "AppStrings.ExposureNotificationSetting.descriptionText1"
		static let descriptionText2 = "AppStrings.ExposureNotificationSetting.descriptionText2"
...
		
		static let openSystemSettings = "AppStrings.NotificationSettings.openSystemSettings"
		static let close = "AppStrings.NotificationSettings.DeltaOnboarding.primaryButtonTitle"
	}
	
...

		enum AppClosureNoticeCell {
			static let container = "AppStrings.Home.AppClosureNoticeCell.container"
			
			enum Details {
...
		enum RiskTableViewCell {
			enum LowRisk {
				static let title = "AccessibilityIdentifiers.Home.RiskTableViewCell.LowRiskTitle"
				static let noExposuresLabel = "AccessibilityIdentifiers.Home.RiskTableViewCell.NoExposuresLabel"
				static let installedLabel = "AccessibilityIdentifiers.Home.RiskTableViewCell.InstalledLabel"
...
			static let inactiveRiskTitle = "AccessibilityIdentifiers.Home.RiskTableViewCell.InactiveRiskTitle"
			
			static let topContainer = "[AccessibilityIdentifiers.Home.RiskTableViewCell.topContainer]"
			static let bodyLabel = "HomeRiskTableViewCell.bodyLabel"
			static let updateButton = "HomeRiskTableViewCell.updateButton"
...

		enum MoreInfoCell {
			static let moreCell = "AppStrings.Home.moreCell"

			static let settingsLabel = "AppStrings.Home.settingsActionView"
			static let recycleBinLabel = "AppStrings.Home.recycleBinActionView"
			static let appInformationLabel = "AppStrings.Home.appInformationActionView"
			static let faqLabel = "AppStrings.Home.faqActionView"
			static let socialMediaLabel = "AppStrings.Home.socialMediaActionView"
			static let shareLabel = "AppStrings.Home.shareActionView"
		}
		
...
			static let titleLabel = "AppStrings.Home.TestRegistrationCell.titleLabel"
			static let descriptionLabel = "AppStrings.Home.TestRegistrationCell.descriptionLabel"
			static let submitCardButton = "AppStrings.Home.TestRegistrationCell.submitCardButton"
		}
		
...
	
	enum ContactDiary {
		static let segmentedControl = "AppStrings.ContactDiary.Day"
		static let dayTableView = "AppStrings.ContactDiary.Day.TableView"
	}
...
	enum ContactDiaryInformation {
		static let imageDescription = "AppStrings.ContactDiaryInformation.imageDescription"
		static let descriptionTitle = "AppStrings.ContactDiaryInformation.descriptionTitle"
		static let descriptionSubHeadline = "AppStrings.ContactDiaryInformation.descriptionSubHeadline"
		static let dataPrivacyTitle = "AppStrings.ContactDiaryInformation.dataPrivacyTitle"
		static let legal_1 = "AppStrings.ContactDiaryInformation.legalHeadline_1"
		
...
	
	enum Onboarding {
		static let onboardingInfo_togetherAgainstCoronaPage_title = "AppStrings.Onboarding.onboardingInfo_togetherAgainstCoronaPage_title"
		static let onboardingInfo_togetherAgainstCoronaPage_imageDescription = "AppStrings.Onboarding.onboardingInfo_togetherAgainstCoronaPage_imageDescription"
		static let onboardingLetsGo = "AppStrings.Onboarding.onboardingLetsGo"
		static let onboardingInfo_privacyPage_title = "AppStrings.Onboarding.onboardingInfo_privacyPage_title"
		static let onboardingInfo_privacyPage_imageDescription = "AppStrings.Onboarding.onboardingInfo_privacyPage_imageDescription"
		static let onboardingContinue = "AppStrings.Onboarding.onboardingContinue"
		static let onboardingInfo_enableLoggingOfContactsPage_button = "AppStrings.Onboarding.onboardingInfo_enableLoggingOfContactsPage_button"
		static let onboardingDoNotActivate = "AppStrings.Onboarding.onboardingDoNotActivate"
		static let onboardingInfo_howDoesDataExchangeWorkPage_title = "AppStrings.Onboarding.onboardingInfo_howDoesDataExchangeWorkPage_title"
...
	
	enum Settings {
		static let tracingLabel = "AppStrings.Settings.tracingLabel"
		static let notificationLabel = "AppStrings.Settings.notificationLabel"
		static let backgroundAppRefreshLabel = "AppStrings.Settings.backgroundAppRefreshLabel"
...
		static let imprintSection4Text = "AppStrings.AppInformation.imprintSection4Text"
		static let privacyImageDescription = "AppStrings.AppInformation.privacyImageDescription"
		static let privacyTitle = "AppStrings.AppInformation.privacyTitle"
		static let termsImageDescription = "AppStrings.AppInformation.termsImageDescription"
		static let termsTitle = "AppStrings.AppInformation.termsTitle"
...

	enum SRSConsentScreen {
		static let primaryButton = "AppStrings.SRSConsentScreen.primaryButton"
		static let secondaryButton = "AppStrings.SRSConsentScreen.secondaryButton"
		static let accImageDescription = "AppStrings.SRSConsentScreen.accImageDescription"
		static let headerSection1 = "AppStrings.SRSConsentScreen.headerSection1"
		static let acknowledgementTitle = "AppStrings.SRSConsentScreen.acknowledgementTitle"
		static let dataProcessingDetailInfoButton = "AppStrings.SRSConsentScreen.dataProcessingDetailInfoButton"
	}
...
		static let sectionHeadline = "AppStrings.ExposureSubmission_DispatchSectionHeadline"
		static let sectionHeadline2 = "AppStrings.ExposureSubmission_DispatchSectionHeadline2"
		static let qrCodeButtonDescription = "AppStrings.ExposureSubmissionDispatch.qrCodeButtonDescription"
		static let positiveSelfTestButtonDescription = "AppStrings.ExposureSubmissionDispatch.positiveSelfTestButtonDescription"
		static let tanInputView = "AppStrings.ExposureSubmissionDispatch.TaninputView"
...
	
	enum AccessibilityLabel {
		static let close = "AppStrings.AccessibilityLabel.close"
	}
	
...
		static let image = "ExposureSubmissionIntroViewController.image"
		
		static let primaryFooterButton = "General.primaryFooterButton"
		static let secondaryFooterButton = "General.secondaryFooterButton"
		static let cancelButton = "General.cancelButton"
...
		static let certificates = "TabBar.certificates"
		static let scanner = "TabBar.scanner"
		static let checkin = "TabBar.checkin"
		static let diary = "TabBar.diary"
	}
...
